--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,9 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/ghostrunner-2">Ghostrunner 2</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/monument-valley-2-addd02">Monument Valley 2</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/the-battle-of-polytopia-12fed6">The Battle of Polytopia</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/project-winter-3b9e84">Project Winter</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/samorost-2-1b9bb1">Samorost 2</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
