--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -18,8 +18,10 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iv-the-complete-edition-gog/dp/amzn1.pg.item.f2368999-6acb-4f03-9f99-b14711e926ee?ingress=amzn&ref_=SM_SidMeiersCivilizationIVTheCompleteEdition_S01_FGWP_CRWN">Sid Meier's Civilization IV: The Complete Edition</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fate-the-cursed-king-gog/dp/amzn1.pg.item.d2b5ccef-a10d-4db3-abd9-de6620c11970?ingress=amzn&ref_=SM_FATETheCursedKing_S01_FGWP_CRWN">FATE: The Cursed King</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iii-complete-gog/dp/amzn1.pg.item.5fbd746f-789f-4b0e-b428-e61e61e54990?ingress=amzn&ref_=SM_SidMeiersCivilizationIIIComplete_S01_FGWP_CRWN">Sid Meier's Civilization III: Complete</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/tower-of-time-gog/dp/amzn1.pg.item.6b0bdd09-4364-43e9-a4db-01d798eed2f8?ingress=amzn&ref_=SM_TowerofTime_S01_FGWP_CRWN">Tower of Time</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/residual-gog/dp/amzn1.pg.item.6c1f74ce-2720-4cb5-a5f1-b996c8a7a1fa?ingress=amzn&ref_=SM_Residual_S01_FGWP_CRWN">Residual</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/subterrain-mines-of-titan-aga/dp/amzn1.pg.item.b1a16e26-3fac-422c-a625-6be6b7fbcdf6?ingress=amzn&ref_=SM_SubterrainMinesofTitan_S01_FGWP_CRWN">Subterrain: Mines of Titan</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/afterimage-aga/dp/amzn1.pg.item.f18930ba-9433-4248-b54a-83086669219e?ingress=amzn&ref_=SM_Afterimage_S01_FGWP_CRWN">Afterimage</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/spelljammer-pirates-of-realmspace-gog/dp/amzn1.pg.item.52ec4505-b95f-4bb7-8158-52738aaf002b?ingress=amzn&ref_=SM_SpelljammerPiratesofRealmspace_S01_FGWP_CRWN">Spelljammer: Pirates of Realmspace</a></div>
