--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,8 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.steampowered.com/app/757910/Away/?snr=1_7_7_2300_150_1">Away</a></div>
-        <div class="game-item"><a href="https://store.steampowered.com/app/3636070/Wander_Stars_Sketchbook/?snr=1_7_7_2300_150_1">Wander Stars Sketchbook</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
