--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.steampowered.com/app/757910/Away/?snr=1_7_7_2300_150_1">Away</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/420740/The_Deed/?snr=1_7_7_2300_150_1">The Deed</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/3636070/Wander_Stars_Sketchbook/?snr=1_7_7_2300_150_1">Wander Stars Sketchbook</a></div>
     </div>
 <footer>
