--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -25,6 +25,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
