--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -26,6 +26,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.playlabs.battle.royale.craft">Battle Royale: Hunger Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
