--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,13 +17,13 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.BrightMoon.ArcheryArena">Archery Arena</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GiftBox.DefenChick.Premium">Defenchick: tower defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.rt.upleftout">Up Left Out</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
