--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,7 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/tormented-souls-aga/dp/amzn1.pg.item.11649f66-25ae-443a-a472-15f4a6d7180b?ingress=amzn&ref_=SM_TormentedSouls_S01_FGWP_CRWN">Tormented Souls</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iv-the-complete-edition-gog/dp/amzn1.pg.item.f2368999-6acb-4f03-9f99-b14711e926ee?ingress=amzn&ref_=SM_SidMeiersCivilizationIVTheCompleteEdition_S01_FGWP_CRWN">Sid Meier's Civilization IV: The Complete Edition</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dragonstrike-gog/dp/amzn1.pg.item.0aa4e118-1a0f-435f-a1e6-5cb1370161e4?ingress=amzn&ref_=SM_DragonStrike_S01_FGWP_CRWN">DragonStrike</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iii-complete-gog/dp/amzn1.pg.item.5fbd746f-789f-4b0e-b428-e61e61e54990?ingress=amzn&ref_=SM_SidMeiersCivilizationIIIComplete_S01_FGWP_CRWN">Sid Meier's Civilization III: Complete</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/fate-the-cursed-king-gog/dp/amzn1.pg.item.d2b5ccef-a10d-4db3-abd9-de6620c11970?ingress=amzn&ref_=SM_FATETheCursedKing_S01_FGWP_CRWN">FATE: The Cursed King</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/tower-of-time-gog/dp/amzn1.pg.item.6b0bdd09-4364-43e9-a4db-01d798eed2f8?ingress=amzn&ref_=SM_TowerofTime_S01_FGWP_CRWN">Tower of Time</a></div>
