--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -22,6 +22,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
     </div>
 <footer>
