--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.BrightMoon.ArcheryArena">Archery Arena</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GameCoaster.ProtectDungeon">Dungeon Defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GiftBox.DefenChick.Premium">Defenchick: tower defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
