--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,6 +21,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GiftBox.DefenChick.Premium">Defenchick: tower defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.GrowHerosVIP">Grow Heroes VIP : Idle Rpg</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
