--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.GameCoaster.ProtectDungeon">Dungeon Defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
