--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/gravity-circuit-489baa">Gravity Circuit</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/albion-online-rogue-journeyman-bundle-99807a">Rogue Journeyman Bundle</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
