--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -20,6 +20,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.cooking.love">Cooking Kawaii - cooking games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.stickman.shadow.knights.fightinggames">Shadow Knight: Ninja Fighting</a></div>
